# wem-fwi

./: .gitignore  .pp.swp  TODO
base/: Makefile  main.cpp
base/INC/: Signal.h
base/SRC/: FFT1.cpp  Signal.cpp
base/include/: Average.h  FFT1.h  NonlinOp.h  Operator.h  Stack.h
complex/: CMakeLists.txt  Makefile.old
complex/INC/: float4DReg.h
complex/SRC/: CMakeLists.txt  complex1DReg.cc  complex2DReg.cc  complex3DReg.cc  complexHyper.cc  float4DReg.cc
complex/include/: complex1DReg.h  complex2DReg.h  complex3DReg.h  complexHyper.h
conformal/: CMakeLists.txt
conformal/jupyter/: test_cmap.ipynb
conformal/src/: CMakeLists.txt  ComplexLog.cpp  ComplexLog.h  ConformalMap.cpp  ConformalMap.h  Identity.h  MapChain.h  Rotation.h  ShiftAndScale.h
conformal/src/python/: CMakeLists.txt  Conformal.py  pyCMap.cpp
conformal/test/: CMakeLists.txt  checkInj.cpp  checkSort.cpp  test_complex_exp.py  test_map_chain.py  test_rotation.py  test_shift_and_scale.py
docker/: Dockerfile  Dockerfile.SEP187  Dockerfile.stable
extPropagator/: CMakeLists.txt
extPropagator/cmake/: FindTBB.cmake
extPropagator/dat/: Makefile  TEMP_bcz4SK  TEMP_v8iG1c  adjBorn.H  adjWEM1.H  adj_wfld.H  bg.H  bg2.H  dslow.H  geometry.json  geometry.par  horizontal.H  linTest.py  mig.py  out  ph.makefile  ph1.H  run.py  sftp-config.json  slow.H  wave.H  wfld2.H  wwph1.H
extPropagator/src/: Born_base.h  Born_down.cpp  Born_down.h  Born_full.cpp  Born_full.h  Born_full_cmplx.cpp  Born_mixing.cpp  Born_mixing.h  Born_refl.cpp  Born_refl.h  Born_up.cpp  Born_up.h  CMakeLists.txt  Device.h  LinOneWay.cpp  LinOneWay.h  OneStep.h  OneWay.cpp  OneWay.h  PSPI.cpp  PSPI.h  Phshift.cpp  Phshift.h  RefSampler.cpp  RefSampler.h  Reflect.h  SSF.cpp  SSF.h  Scatter.cpp  Scatter.h  Selector.h  SplitStep.cpp  SplitStep.h  WEM.cpp  WEM.h  WEM_nl.cpp  dReflect.h  ic.cpp  ic.h  illumination.h
extPropagator/src/python/: CMakeLists.txt  ExtWEM.py  SuperWEM.py  WEM.py  pyWEM.cpp  rec.H
extPropagator/test/: CMakeLists.txt  checkBorn.cpp  checkWEM.cpp  check_adjBorn.cpp  check_adjWEM.cpp  dotBorn.cpp  dotPh.cpp  dotWEM.cpp
filter/: Makefile
filter/python/: PCA.py
filter/src/: Conv.cpp  Kolmogorov.cpp  Shaping.cpp  main.cpp
filter/test/: g1.H  g2.H  kol.f.H  kol.s.H  kolmo.m  pca_test.py  r1.H  r2.H  shaping.m  sp1.H  sp2.H  t.H  test.H  test2.H  test3.H  w1.H  w11.H  w2.H  w22.H
makefiles/: Makefile
makefiles/carLine/: fig.makefile
makefiles/constWrongBg/: fig.makefile
makefiles/marmousiWEM/: Makefile
makefiles/moraWrongBg/: Makefile  fig.makefile
operator/: CMakeLists.txt  Makefile.old
operator/cmake/: FindFFTW.cmake
operator/jupyter/: test-lanczos-2d.ipynb
operator/jupyter/.ipynb_checkpoints/: Untitled2-checkpoint.ipynb  test-lanczos-2d-checkpoint.ipynb
operator/src/: Average.cpp  Average.h  CMakeLists.txt  FFT1.h  FFT1_c.cpp  FFT1_r.cpp  Hilbert.h  Interpolation1D.h  Interpolation2D.h  Interpolation3D.h  LanczosInterpolation2D.h  LanczosInterpolation3D.h  LeakyIntegration.h  LinearInterpolation3D.h  Operator.h  Pad.h  Spline2D.h  Spline3D.h  StackAndSpread.h  Taper.cpp  Taper.h  Weight.cpp  Weight.h  WeightC.cpp  WeightC.h  lanczos_kernel.h  lanczos_kernel.ispc
operator/src/python/: CMakeLists.txt  Operator.py  pyOp.cpp
operator/test/: CMakeLists.txt  test_operator.py
propagator/: CMakeLists.txt
propagator/cmake/: FindTBB.cmake
propagator/dat/: .geometry.json.swp  Makefile  adjBorn.H  adjBorn2.H  bg.H  born.makefile  born2.H  born_wfld.H  const_wavefield_two.H  der.H  dslow2.H  geometry.json  geometry.par  invert.py  irreg.json  makeVel.py  mig.H  nl_inv.py  ph.H  ph.makefile  ph1.H  ph2.H  slow.H  slow2.H  test.H  test_ext_model.py  test_ext_wavefield.py  test_snap_marm.py  test_snap_wavefield.py  tslow.H  wave.H  wfld  wfld.H  wfld1.H  wph1.H  wwave.H
propagator/jupyter/: 0.csv  1000.csv  2000.csv  angles.json  irreg.json  q1.csv  test-ext-born-imp-resp.ipynb  test-lanczos-mig.ipynb  test-prop-dask.ipynb  test-prop-ext-wem.ipynb  test-prop-wem.ipynb  test-stat-phase.ipynb  test.txt
propagator/jupyter/.ipynb_checkpoints/: test-der-vs-t-mig-checkpoint.ipynb  test-ext-born-imp-resp-checkpoint.ipynb  test-prop-dask-checkpoint.ipynb  test-prop-ext-wem-checkpoint.ipynb  test-prop-wem-checkpoint.ipynb  test-stat-phase-checkpoint.ipynb
propagator/src/: Acquisition.h  BornFull.cpp  BornFull.h  BornFullCmplx.cpp  BornRefl.cpp  BornRefl.h  BornReflCmplx.cpp  BornTomo.cpp  BornTomo.h  BornTomoCmplx.cpp  Born_down.cpp  Born_down.h  Born_refl.cpp  Born_refl.h  Born_trans.cpp  Born_trans.h  Born_up.cpp  Born_up.h  CMakeLists.txt  Device.h  Injection.cpp  Injection.h  LinOneWay.cpp  LinOneWay.h  LinTrans.cpp  LinTrans.h  Makefile  OneStep.h  OneWay.cpp  OneWay.h  PSPI.cpp  PSPI.h  Phshift.cpp  Phshift.h  Phshift_cmplx.cpp  PropParam.h  RefSampler.cpp  RefSampler.h  Reflect.h  SSF.cpp  (+30 more)
propagator/src/python/: CMakeLists.txt  ExtWEM.py  WEM.py  indieExtWEM.py  newExtWEM.py  pyWEM.cpp  py_wem_ops.cpp  wem_ops.py
propagator/test/: CMakeLists.txt  checkBorn.cpp  checkWEM.cpp  check_adjBorn.cpp  dotBorn.cpp  dotPh.cpp  dotWEM.cpp  geometry.json  memcheckWEM.cpp  test_wem_ops.py  valgrind-out.txt
sbatch/: fwiJob.py  install.job  install.sh  launchEFWI.py  launchFWI.py  parallelRun.py  slurm.py
scripts/: LBFGS_inv.py  LBFGS_inv_REG.py  LBFGS_med.py  LBFGS_multi_8-16.py  auglag-efwi.py  bandpass.py  cmplx_convert.py  cmplx_run.py  create_random.py  decon.py  dualag-efwi.py  efwi.py  ext-born-inv.py  f2tau.py  fwi.py  hilbert.py  interpol.py  interpolation.py  lanczos_fwi.py  leaky.py  leaky_fwi.py  makeVel.py  mat2numpy.py  mig.py  mig_mult.py  mpi_run.py  patches.py  pre_vp_tfwi.py  random_model.py  run.py  shift.py  smooth_fwi.py  sum_two_fwi.py  sum_with_bg.py  taper.py  tau2f.py  test.py  test_efwi.py  test_pca.py  tfwi_density.py  (+2 more)
scripts/unit_tests/: dotTest.py  dot_test_born.py  dot_test_wem.py  dot_wem_ops.py  mig.py  model.py  modelBorn.py  test_fwd_extBorn.py
utils/: plots.py
